# Optical-Coherence-Tomography

./: .gitignore  LICENSE.txt  README.rst  app.py  gradCam.py  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
ios/: Podfile  README.md
ios/ImageClassification/: AppDelegate.swift  Info.plist
ios/ImageClassification.xcodeproj/: project.pbxproj
ios/ImageClassification.xcworkspace/xcuserdata/gil.xcuserdatad/: UserInterfaceState.xcuserstate
ios/ImageClassification/Assets.xcassets/oct_ai_logo.imageset/: Contents.json
ios/ImageClassification/Assets.xcassets/oct_ai_splash_logo.imageset/: Contents.json
ios/ImageClassification/ModelDataHandler/: ModelDataHandler.swift
octapp/: .gitignore  application.py  requirements.txt
octapp/octapp/: __init__.py  gradCam.py  predict.py  routes.py
octapp/octapp/templates/: classify.html
src/OCT_Model/: OCT_classifier.py  OCT_classifier2.py  OCT_classifier_Inception.py  OCT_classifier_MobileNet.py  __init__.py  config.yml  data_utils.py  gradCam.py  playground.ipynb  playground2.ipynb  playground_aws.ipynb  playground_multiple_models.ipynb  resnet_interface.py
src/PAWS/: paws_train.py
src/PAWS/models/: wide_resnet.py
src/PAWS/utils/: Untitled.ipynb  config.py  data_loader.py  labeled_loader.py  multicrop_loader.py  random_idx.npy
src/Simclr/: FineTune.py  SimCLRInTensorflow2.py  SimCLRInTensorflow2_Multiple_GPUs.py  fineTuneEvaluation.py  helpers.py  linearEvaluation.py
static/uploads/: .gitignore
templates/: upload.html
tests/: __init__.py
(+69 files in other folders)
