

[metadata]
name = potholes_detection_system
keywords=potholes_detection_system
version = 0.0.1
license = "MIT license",
description = A deep learning system to detect roads cracks and potholes
long_description = file: README.rst
author = Name Surname
author_email = skander.k.soltani@gmail.com
url=https://github.com/SkanderSoltani/potholes_detection_system
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy

[options.packages.find]
where=src



[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:src/potholes_detection_system/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"



[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 79


